webpack - css, image

--- a/1.setup-a-minimal-node-based-web-app.md
+++ b/1.setup-a-minimal-node-based-web-app.md
@@ -148,4 +148,4 @@ DELETE: <http://localhost:3001/api/user>
 
 ## Source code
 
-Check the complete source from [here](placeholder)
+Check the complete source from [here](https://github.com/rick-hayek/web-dev-tutorial/tree/master/1.setup-a-minimal-node-based-web-app).
