--- a/2.use-webpack-for-bundling-web-assets.md
+++ b/2.use-webpack-for-bundling-web-assets.md
@@ -28,6 +28,8 @@ Modify `index.js` as:
 console.log("Hello webpack!");
 ```
 
+**Note:** the all shell commands below are issued from directory `<your-working-directory>/2.use-webpack-for-bundling-web-assets/` unless explicitly specified.
+
 ## Setting up webpack
 
 From terminal while in directory `2.use-webpack-for-bundling-web-assets/`:
@@ -45,7 +47,7 @@ Update `package.json`:
   },
 ```
 
-From terminal while in directory `2.use-webpack-for-bundling-web-assets\`:
+From terminal run:
 
 ```bash
 npm run build
@@ -117,8 +119,12 @@ Modify `index.html` as:
 ```html
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>My Web App</title>
+  </head>
   <body>
-    <h1>Hello web app</h1>
+    <h1>web app</h1>
+    <div id="app">Welcome to web development</div>
   </body>
 </html>
 ```
@@ -155,3 +161,228 @@ module.exports = {
 ```
 
 Now run `npm start`. You will find the bundle script is injected to the resulting HTML file. And this home page gets served.
+
+## Processing CSS
+
+### Importing css from javascript
+
+To `import` or `require` a style file, we need to install _css-loader_:
+
+```bash
+npm i css-loader --save-dev
+```
+
+Configure it in `webpack.config.js`:
+
+```js
+  module: {
+    rules: [
+      ...,
+      {
+        test: /\.(css)$/,
+        use: [
+          { loader: "css-loader"}
+        ]
+      }
+    ]
+  },
+```
+
+Now you are allowed to import css in a javascript file:
+
+```javascript
+import from "./style/main.css";
+import style1 from "./style/myStyle.css";
+const anotherStyle = require("./style/anotherStyle.css");
+```
+
+Try it:
+
+```bash
+cd src
+mkdir style
+cd style
+touch index.css
+```
+
+Add any valid styles into `index.css`, and then reference it from the entry `./src/index.js`:
+
+```javascript
+import "./style/index.css";
+
+console.log("Hello webpack!");
+```
+
+Run `npm run build` to check if sources can be built successfully. For comparison, you can delete the css rule from `webpack.config.js`, then run `npm run build`. Should get errors.
+
+_Note, if running `npm start`, you may find the css doesn't take effect as it isn't actually used in HTML file._
+
+### Using style files
+
+#### Inline styles
+
+Use `style-loader` to inject css contents into `<style>` tag:
+
+```bash
+npm i style-loader --save-dev
+```
+
+Configure it in `webpack.config.js`:
+
+```js
+  module: {
+    rules: [
+      ...,
+      {
+        test: /\.(css)$/,
+        use: [
+          { loader: "style-loader"},
+          { loader: "css-loader"}
+        ]
+      }
+    ]
+  },
+```
+
+Create a sample css file:
+
+```bash
+cd src
+cd style
+touch inline.css
+```
+
+Add some valid styles to `inline.css`. Then reference it from entry point `index.js`:
+
+```js
+import "./style/index.css";
+import inlineStyle from "./style/inline.css";
+
+console.log(inlineStyle);
+console.log("Hello webpack!");
+```
+
+Run `npm start`, you will find:
+
+- There's no injected `<style>` tag s from the resulting `./dist/index.html`
+- All styles are applied (in runtime) when you browse <http://localhost:3002/>
+
+#### Generating external css file
+
+Inline style usually is not a good idea for a complex production web application. We should reference external css file from `<link>` tag. The plugin `mini-css-extract-plugin` will extract all css contents from all `.css` files, and write them into a single output css file, then inject the reference to `<link>` tag of resulting HTML file.
+
+```bash
+npm install --save-dev mini-css-extract-plugin
+```
+
+Configure it in `webpack.config.js`:
+
+```js
+const MiniCssExtractPlugin = require("mini-css-extract-plugin");
+module.exports = {
+  ...,
+  module: {
+    rules: [
+      ...,
+      {
+        test: /\.(css)$/,
+        use: [
+          { loader: MiniCssExtractPlugin.loader},
+          { loader: "css-loader"}
+        ]
+      }
+    ]
+  },
+  plugins: [
+    ...,
+    new MiniCssExtractPlugin({
+      filename: "main.css" // resulting stylesheet file
+    })
+  ],
+```
+
+Run `npm start`:
+
+- A `./dist/main.css` is created as resulting stylesheet file
+- `main.css` is referenced by the resulting `index.html` in `<link>` tag
+- All styles are correctly applied when you browse <http://localhost:3002/>
+
+#### Using sass file
+
+To support **sass** file, install `sass-loader` and `node-sass`:
+
+```bash
+npm i sass-loader node-sass --save-dev
+```
+
+Add `sass-loader` into the existing style configuration block in `webpack.config.js`:
+
+```javascript
+  {
+    test: [/\.css$|\.scss$/],
+    use: [
+      { loader: MiniCssExtractPlugin.loader},
+      'css-loader',
+      'sass-loader'
+    ]
+  }
+```
+
+## Processing image
+
+The [file-loader](https://webpack.js.org/loaders/file-loader) resolves `import/require()` on a file into a url and emits the file into the output directory:
+
+```bash
+npm install file-loader --save-dev
+```
+
+Update `webpack.config.js` to add rule for image files:
+
+```javascript
+{
+  test: /\.(png|jpg|gif|svg)$/,
+  use: [
+    {
+      loader: 'file-loader',
+      options: {
+        name: '[name].[hash:8].[ext]'
+      }
+    }
+  ]
+}
+```
+
+Then you can import image from a js file like this:
+
+```javascript
+import logo from "path/to/image/logo.png";
+```
+
+Let's try it.
+
+```bash
+cd src
+mkdir image
+```
+
+Find an image file, and save it in `./src/image` folder. Then include it from entry point `./src/index.js`:
+
+Update `index.js` as:
+
+```javascript
+...
+import background from "./image/beach-exotic-holiday.jpg";
+
+console.log(background);
+var img = document.createElement("img");
+img.src = background;
+
+var container = document.getElementById("app");
+container.appendChild(img);
+```
+
+Build and run the application to check if image works.
+
+## Source code
+
+Check the complete source from [here](https://github.com/rick-hayek/web-dev-tutorial/tree/master/2.use-webpack-for-bundling-web-assets).
