--- a/2.use-webpack-for-bundling-web-assets.md
+++ b/2.use-webpack-for-bundling-web-assets.md
@@ -2,7 +2,7 @@
 
 ## Prerequisites
 
-You need to finish the tutorial [setup a minimal node based web app](placeholder)
+You need to finish the tutorial [setup a minimal node based web app](https://github.com/rick-hayek/web-dev-tutorial/blob/master/1.setup-a-minimal-node-based-web-app.md)
 
 ## Initializing
 
