--- a/3.prepare-different-config-for-dev-and-prod-env.md
+++ b/3.prepare-different-config-for-dev-and-prod-env.md
@@ -22,7 +22,7 @@ cp ..\2.use-webpack-for-bundling-web-assets\src\ src\ -R -Force
 cp ..\2.use-webpack-for-bundling-web-assets\webpack.config.js
 ```
 
-for windows:
+_for windows:_
 
 ```bash
 mkdir src
@@ -49,11 +49,72 @@ After packages get installed, run `npm start` to check application works well on
 
 **Note:** the all shell commands below are issued from directory `<your-working-directory>/3.prepare-different-config-for-dev-and-prod-env/` unless explicitly specified.
 
-## Organize configurations
+## Organizing configurations
 
 ```bash
 mkdir config
+cd config
+touch paths.js
 ```
+
+Initialize the `paths.js` as following contents:
+
+```javascript
+const fs = require("fs");
+const path = require("path");
+
+const appDirectory = fs.realpathSync(process.cwd());
+const resolveApp = relativePath => path.resolve(appDirectory, relativePath);
+
+module.exports = {
+  appIndexJs: resolveApp("src/index.js"),
+  appBuild: resolveApp("build"),
+  appHtml: resolveApp("src/public/index.html")
+};
+```
+
+Move the `webpack.config.js` from application root folder into newly created `config` folder. And then update the `scripts` from `package.json`:
+
+```json
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --config ./config/webpack.config.js && webpack-dev-server --open --config ./config/webpack.config.js",
+    "clean": "rm -rf ./dist/ && rm -rf ./build/",
+    "build": "webpack --config ./config/webpack.config.js",
+    "rebuild": "npm run clean && npm run build"
+  },
+```
+
+Run `npm run build`, `npm run rebuild` and `npm start` to check these scripts work well.
+
+### webpack.config
+
+Remove hard-coded paths from `webpack.config.js` to use values defined in `paths.js`:
+
+```javascript
+...
+const paths = require("./paths");
+
+module.exports = {
+  entry: paths.appIndexJs, // script entry point
+  output: {
+    path: paths.appBuild // output folder, should be an absolute path
+  },
+  devServer: {
+    contentBase: paths.appBuild // webpack-dev-server root
+  },
+
+  ...,
+
+  plugins: [
+    new HtmlWebPackPlugin({
+      template: paths.appHtml // source html file
+    })
+  ]
+};
+```
+
+Run `npm run build`, `npm run rebuild` and `npm start` to check these scripts work well.
 
 ### dotenv
 
