split webpack config for dev and prod

--- a/3.prepare-different-config-for-dev-and-prod-env.md
+++ b/3.prepare-different-config-for-dev-and-prod-env.md
@@ -73,7 +73,13 @@ module.exports = {
 };
 ```
 
-Move the `webpack.config.js` from application root folder into newly created `config` folder. And then update the `scripts` from `package.json`:
+Move the `webpack.config.js` from application root folder into newly created `config` folder.
+
+```bash
+mv .\webpack.config.js .\config\
+```
+
+And then update the `scripts` from `package.json`:
 
 ```json
   "scripts": {
@@ -87,7 +93,7 @@ Move the `webpack.config.js` from application root folder into newly created `co
 
 Run `npm run build`, `npm run rebuild` and `npm start` to check these scripts work well.
 
-### webpack.config
+### webpack.config.js
 
 Remove hard-coded paths from `webpack.config.js` to use values defined in `paths.js`:
 
@@ -120,4 +126,28 @@ Run `npm run build`, `npm run rebuild` and `npm start` to check these scripts wo
 
 ```bash
 npm i dotenv --save-dev
+```
+
+## Adding production configurations
+
+Create a new file `webpack.config.prod.js`:
+
+```bash
+cd config
+touch webpack.config.prod.js
+```
+
+Copy the contents of `webpack.config.js` to `webpack.config.prod.js`, and update for production configurations, like minimization, code split, compression and etc..
+
+Then add commands for production build in `package.json`:
+
+```json
+"scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --config ./config/webpack.config.js && webpack-dev-server --open --config ./config/webpack.config.js",
+    "clean": "rm -rf ./dist/ && rm -rf ./build/",
+    "build": "webpack --config ./config/webpack.config.prod.js",
+    "rebuild": "npm run clean && npm run build",
+    "prod": "npm run rebuild && webpack-dev-server --open --config ./config/webpack.config.prod.js"
+  },
 ```
